<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/White"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray2"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/llTajhizName"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            android:weightSum="10" 
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txtNameTaghizAction"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:lineSpacingExtra="8dp"
                android:text="پیشخوان بانکی" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/NameTaghiz" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMahaleEsteghrar"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtMahaleTaghiz"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="10dp"
                android:text="محل استقرار" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/MahaleTaghiz" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtDarkhastkonandeAction"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="شهرداری یزد" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/DarkhastKonande" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtDateDarkhastAction"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="تاریخ درخواست" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/DateDarkhast" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtNoDarkhastAction"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="شماره درخواست" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/NoDarkhast" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtErjaDate"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="تاریخ ارجاع" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="تاریخ ارجاع" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtErjaDahande"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="ارجاع دهنده" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="ارجاع دهنده" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtMohlateEghdam"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="مهلت اقدام" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/MohlateEghdam" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtHameshinfo"
                style="@style/FillDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="هامش" />

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/Hamesh" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                style="@style/TitleDarkhastInfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/SharheDarkhast" />

            <TextView
                android:id="@+id/txtSharheDarkhastAction"
                style="@style/FillDarkhastInfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:lineSpacingExtra="8dp"
                android:text="اطلاعات مربوط به کارت ها به سرور انتقال پیدا نمی کند." />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>